--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ wasm-bindgen = { version = "0.2" }
 web-sys = { version = "0.3.66", features = [
   'CanvasRenderingContext2d',
   'Document',
+  'DocumentTimeline',
   'Element',
   'HtmlCanvasElement',
   'Window',
   'Performance',
   'ImageData',
 ] }
+rand = "0.8.5"
