--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ web-sys = { version = "0.3.66", features = [
   'GainNode',
 ]}
 rand = "0.8.5"
+leptos_router = { version = "0.5.4", features = ["csr"] }
